# ChangeLog for x11-drivers/xf86-input-evdev
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-evdev/ChangeLog,v 1.108 2009/04/16 03:20:48 jer Exp $

  16 Apr 2009; Jeroen Roovers <jer@gentoo.org>
  xf86-input-evdev-2.1.3.ebuild:
  Stable for HPPA (bug #251832).

  15 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  xf86-input-evdev-2.1.3.ebuild:
  ia64/sh stable wrt #251832

  14 Apr 2009; Tomas Chvatal <scarabeus@gentoo.org>
  xf86-input-evdev-1.2.0.ebuild, xf86-input-evdev-1.99.2-r2.ebuild,
  xf86-input-evdev-2.0.1.ebuild, xf86-input-evdev-2.0.2.ebuild,
  xf86-input-evdev-2.0.4.ebuild, xf86-input-evdev-2.0.5.ebuild,
  xf86-input-evdev-2.0.6.ebuild, xf86-input-evdev-2.0.7.ebuild,
  xf86-input-evdev-2.0.8.ebuild, xf86-input-evdev-2.1.0.ebuild,
  xf86-input-evdev-2.1.1.ebuild, xf86-input-evdev-2.1.2.ebuild,
  xf86-input-evdev-2.1.3.ebuild, xf86-input-evdev-2.2.0.ebuild,
  xf86-input-evdev-2.2.0-r1.ebuild, xf86-input-evdev-2.2.1.ebuild:
  Update the fdi file location for now. On my devspace. It is installed by
  hal-0.5.12_rc1 too. So when it gets stable this could be removed.

*xf86-input-evdev-2.2.1 (10 Apr 2009)

  10 Apr 2009; Donnie Berkholz <dberkholz@gentoo.org>;
  +xf86-input-evdev-2.2.1.ebuild:
  Bump. A set of fixes to make touchpads work nicely again. Fix to enable
  key repeat for server 1.5 + evdev 2.2.

  06 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  xf86-input-evdev-2.1.3.ebuild:
  Stable on sparc, bug #251832

  05 Apr 2009; Markus Meier <maekke@gentoo.org>
  xf86-input-evdev-2.1.3.ebuild:
  x86 stable, bug #251832

  05 Apr 2009; Olivier Crête <tester@gentoo.org>
  xf86-input-evdev-2.1.3.ebuild:
  Stable on amd64, bug #251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking xf86-input-evdev-2.1.3 ppc64 stable for bug 251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking xf86-input-evdev-2.1.3 ppc stable for bug 251832
