@@ -8,37 +8,16 @@ AUX 1.99.2/0005-evdev-Port-b4a5a204-Fix-pointer-crossing-screen-bu.patch 1249 RM
 AUX 2.2.0-Restore-repeat-filtering-for-server-1.5-and-earlier.patch 1534 RMD160 ec88db7f0ac21366207ba58784b2abdf1400ce92 SHA1 3f51f36f9fcd32bb1e471b0b5a743363ace7f9d2 SHA256 533ad215deaa9744fa6407933e9d200c130d01ebe5d4c9f3778a71b17591eb41
 DIST xf86-input-evdev-1.1.5.tar.bz2 242307 RMD160 13292abea84654828af720c720988a3f6c7f9ac8 SHA1 70650b58c69afdd0ef22e6c647944fc6b5b12e0f SHA256 52b7daab86dade2d189f0378ddf196c018cdc9dd47ade0b3b8fc7591cb4bbe9e
 DIST xf86-input-evdev-1.2.0.tar.bz2 259428 RMD160 f5c414d9154a3d130fecf183e71e2b75a476dd02 SHA1 c1ff9c377978158790b5522735743b09090ad8f5 SHA256 b23b231d754cab717a4b145ee3a5f3e73db46d877d23502326e9794d92d976ba
-DIST xf86-input-evdev-1.99.2.tar.bz2 241747 RMD160 7878417e4e2988de92b1322f153202c2978c9d1f SHA1 04edb8dc741bc4b5be4a6eef4f723c61869a6beb SHA256 79bf0df91eba04aabae762ca5da3b47e571b04e715bced03035b1d0dd0ad3933
-DIST xf86-input-evdev-2.0.1.tar.bz2 235770 RMD160 3c8ef25514a6e87b3e4640879159cd81d612a27b SHA1 ad409a831a06c886fc9995bc9b9fe3e94b214d95 SHA256 42e72f1d4821ef06437ac2798247bc2b0cf9eb4ef3a7ac0b8b5d837c10f5c487
-DIST xf86-input-evdev-2.0.2.tar.bz2 265247 RMD160 15e4e2952e7543ceb4f22443ab44ebbb01a7e9d4 SHA1 88f85d60af65698f5264d532c1836f3de4d87762 SHA256 07ec56d25740c58052596d695e5606b4b12ee2d8d02d5a0883e72cd6f4fbd231
-DIST xf86-input-evdev-2.0.4.tar.bz2 266062 RMD160 ce2ae8e725aa18abeb59a7555eba66420ca04e0e SHA1 eab79e7b11bc5b3ada81cc75098a113944d9b64c SHA256 825adcadaf4c90d4cb1d0bd21dcf67bf3b895f12f8e7bf186ed936445dc015ca
-DIST xf86-input-evdev-2.0.5.tar.bz2 267630 RMD160 ee9b99882c3bf56ec39c6b010552482ee588a4ef SHA1 9b6b77e6d9aa9bfbe0b7a31d4d070c0f6d372311 SHA256 13a99966a1bb531fabe827c1e6defe22a7b8e97bea7083afbb0206344655c7f6
-DIST xf86-input-evdev-2.0.6.tar.bz2 267932 RMD160 389222d3a8d9bf6fe86bb5cc3c4d09f8ff08f7ec SHA1 fb84b919f2852fc345e62f7e17a209957e1304bc SHA256 2650de6c2aed7862c7a57b80ecf09305b779fc5b1e0822714f2af069b8085027
-DIST xf86-input-evdev-2.0.7.tar.bz2 268503 RMD160 b511be4bebdbeef2170d624d88aaee186a8148fc SHA1 f7e6148e7772cf23ee6107748279cfd428ae2195 SHA256 db9e31c6caa5fd3b8eb72b28583e9ab1e9cde19631c5f0674cecbd1d3902011d
 DIST xf86-input-evdev-2.0.8.tar.bz2 263061 RMD160 1465018c2ee8dfd22d26a21f27d06c69b2112cd5 SHA1 57a88717a621957d82169b7508ef293214f4b952 SHA256 0552130566fbed2081884649b8a996bb53cf8c4c38b7c1b37c6c014d9c9e11a0
-DIST xf86-input-evdev-2.1.0.tar.bz2 275582 RMD160 e78a8a69d93ead2b95e5ea360f2cb154336e0ea4 SHA1 afa5b981e4205fbefe1a21b95fa973f1c6532142 SHA256 45c4b6df8d1dbc4db8aa580be4f3c693ebba4eba4908d82489948827d3bed0e5
-DIST xf86-input-evdev-2.1.1.tar.bz2 277428 RMD160 430f3202c314c478c9e9a94d8a9c99a289de300e SHA1 ec9c69e4913c9beac8d1003be70189f9721e8eef SHA256 e9fe0c120d82c0ac75a4ad37f1767174cb2e042c3913e10490b1a71d1b53c26e
-DIST xf86-input-evdev-2.1.2.tar.bz2 277434 RMD160 de3df81ec5630e2fe00d71b7beeb5391cf35ab43 SHA1 a9da222fde2b0fd3b95d951c5c9fb32b0c9e5aac SHA256 20855ba42d33c586cd3966a99185d87567294c6ae32d39b7968231ce3ac2effa
 DIST xf86-input-evdev-2.1.3.tar.bz2 278213 RMD160 2886e3a9713524ae902a322b18c88b8b24b35bf9 SHA1 ea8a63aa6243e272db39aad50a993768d6c2c853 SHA256 78a1dcd0bd68b94a36f06fe8fc01389bc96868a6572515b0453e42839be9bcec
 DIST xf86-input-evdev-2.2.0.tar.bz2 288097 RMD160 c21b0a03d406c81ca14f8cfa560107ac104fd578 SHA1 934a65479a641d53583ce5fc525c6f20b161482f SHA256 acf87c9438e647c6f61906b82fa1aa458c8d076f261eb1a882507263c9fa1622
 DIST xf86-input-evdev-2.2.1.tar.bz2 289743 RMD160 252a8360933768d6b9e3c5338f3e46417d31db9b SHA1 86c38c64af53b6b01c08e276b6614bf9c94c1374 SHA256 c357bec4286249bc39e820a7a383520e0ee154ecc68fef72c70db13e233ee2a7
 EBUILD xf86-input-evdev-1.1.5-r1.ebuild 690 RMD160 4754f276989205b8082ef9f192ac999b14700021 SHA1 26132a9b58a2a69e9e595daeaadee6dd61439203 SHA256 3b57eb22680cb4e1dc5fe3ddbf1cd4bdf9e99e23cecee6f284f52bff587464f6
 EBUILD xf86-input-evdev-1.1.5-r2.ebuild 731 RMD160 a6cfcbe33171f24b0732bebfdfe9d0e56dee8d94 SHA1 cc2fe7bb1d288b76888c98f26bb3f1260eadca51 SHA256 1bd01e85e8fb81da3b826024be1b1c4db37dbbad9ed72afbe99d62ebd2c5b9f6
 EBUILD xf86-input-evdev-1.2.0.ebuild 994 RMD160 999e66fbd41a9db783e3b182b435f405983da83d SHA1 d4d2305b540f77dd2ab7c7ab0dbfb8a640a43434 SHA256 9456a2a508f119049905416ecfdbf86ed7e98c7255ab206c6380842517713161
-EBUILD xf86-input-evdev-1.99.2-r2.ebuild 1421 RMD160 059db61f52f515e18ff0e927e1bbbb1e2acd6f3c SHA1 ef94e30f595254741f9592a83d8f2eca7df4d861 SHA256 f56744c647d65959c897a5048c0f0092da052d8b5ffd5b0876a6cc79cc8a8b9d
-EBUILD xf86-input-evdev-2.0.1.ebuild 1089 RMD160 3918dfb3f8ba37a9afd0e2a15ec5761c5302adfa SHA1 365a8e6d9a6f67e581aabbb3c7e7202e137acead SHA256 48c3faeed46c2dca5b598a71529d43056faa1bf0d955901ede22eb71eb6b26e6
-EBUILD xf86-input-evdev-2.0.2.ebuild 1089 RMD160 240832c6545c2968411718fcc945eeb3e5e9daf7 SHA1 e91b9bc1a1c61241ef980e7d8fe97a724a6e61c9 SHA256 5baa2ff97dc709e3648b42892e3cf1bf59c6d323c2d14dbb88bd7b595902fe98
-EBUILD xf86-input-evdev-2.0.4.ebuild 1094 RMD160 978bc3a8f2407e4f6863a44b104cafa15dca30d4 SHA1 af83e9cb778395e49a36623f0db22ac3bf106bd8 SHA256 4c7477ece12e8b41da40aa1fa98178f9f0568d6eba602f2b8772a4089fa4d8dd
-EBUILD xf86-input-evdev-2.0.5.ebuild 1094 RMD160 be4ce896eeb4c35b1713d5aa4deabd7807495945 SHA1 0826d00897edf24923a87d13baebf9f86977c048 SHA256 81a7eb240df78b4c5e40b6f974c6a30005f191e8d6149dc7fdaea80f76cc8f01
-EBUILD xf86-input-evdev-2.0.6.ebuild 1094 RMD160 787304fc511f76d398a503d96d4146f9833abdc4 SHA1 ce0b4d3d97c2304115759a3714e5868310bd3796 SHA256 5f840a0d0caabba86cd5c314a55eebe1d91171a67e6d40ba4fda0de959b31c19
-EBUILD xf86-input-evdev-2.0.7.ebuild 1094 RMD160 7587f219cd72ce60ed7ba187bda3d8194b6e81e7 SHA1 1bc495634d3c6e46ab7c6e038231c42ac3474460 SHA256 3a4571250907bdb84fbd66aadb72bf453e26a1a210ca37afb4406a32adceefeb
 EBUILD xf86-input-evdev-2.0.8.ebuild 1094 RMD160 6d83228097a9f82e81376a6dc8959eee889823a1 SHA1 d5f06a1ea493d9bce0f8a7652bd954db9ec612e8 SHA256 bbf56448d5dddc163b58e6f1bb1e309f7f9ca3da4e7c88bad1891cce461b121c
-EBUILD xf86-input-evdev-2.1.0.ebuild 1091 RMD160 09f62f673f267809f865ce9023e44161cb77a685 SHA1 28fda0416b5ab8ab156754a4bb384b46f895bc91 SHA256 de1c96fe1db13dca66f166c4a57ee3d8df9b270ef907ea10a1825ced0d11a308
-EBUILD xf86-input-evdev-2.1.1.ebuild 1091 RMD160 0fd05291a3eb21e91098d45965ad8377ea5cb090 SHA1 9f898adc947c0440713076af5bafcd6b7019cbd6 SHA256 4f0e713aa3fa31351c78569a7879645ab742ee5b567c16431aef0d8bc0e34d6f
-EBUILD xf86-input-evdev-2.1.2.ebuild 1091 RMD160 1e9f3691537626f1df602b32d323cc3b935579bc SHA1 0e4e1a47ad33924b4d4edf20837fdf92819b16ad SHA256 4dc7323cac23573ccf9efb346a05fc1b13e392096bcb26d851366d8e4b509947
 EBUILD xf86-input-evdev-2.1.3.ebuild 1078 RMD160 bae18ac96760c1c4313e9b7cd6502bdaedd23eea SHA1 111905926cf473ac345790bd416506f43eaf2668 SHA256 78ebae9eede1ef6a6c017e1258015da981f7919cc5b362154cb8213eada0012b
 EBUILD xf86-input-evdev-2.2.0-r1.ebuild 1181 RMD160 58242dc7c63b1e0e502b06bfdf3d77cfbd046e9a SHA1 36098f1f3f02cf95e861b84d5196b3efd310d63f SHA256 ff2cbae6db8e430e35e6643de6d00f692baa37623ceedd7f304e572d92a5ac35
-EBUILD xf86-input-evdev-2.2.0.ebuild 1091 RMD160 a8d9ff2844173e56bf38f3e2932794f34b64428f SHA1 96e5f436c818c88a04763a8a9007d04342290d66 SHA256 c9deb22b3ee35cd2ee563321ae046fd8c7c62d6e870a8e41e5c30df0cd1c9614
 EBUILD xf86-input-evdev-2.2.1.ebuild 1091 RMD160 fa093fb81af7c6dc661c39f3822e67377239b882 SHA1 fa66d2042c8bc1f93d2d10d39fe8efe0d4548236 SHA256 f4db17c9ef621dc8adcb887f587e57961f55b2c6e8e9d1a9046c0ed74f27fe81
-MISC ChangeLog 18088 RMD160 2ccce3a76549bc50920cb0f6652127c924a85783 SHA1 a92e0b4cd7cdaf1ac5a4c5a304599b4cb5a87cab SHA256 c5ec2836e2a7bf2d845b99018d8832c8e340aa5b417c9e10cc9d32ce6a3fcd3c
+MISC ChangeLog 18528 RMD160 02fffd4d4bb0b7ed76bf3e8ff67e6b2f2f144607 SHA1 ab002b70306d5b99892f9336a07c03b6f516eef2 SHA256 0079baefd21a5991623cf19a9ae1461cd625dbb92d35a3f6c011fd4f7063c79a
 MISC metadata.xml 254 RMD160 4c78a3f1774bde4ae8506ab4619cd8b3f4ae2dde SHA1 3a5ad14cd125c6473ac6784ff8b64106d2d3f9b2 SHA256 b579362a5f108a6f8ba3ea99fcba0b7fa4fa91838428fba80e8c66ef12530cc8
