@@ -1,6 +1,15 @@
 # ChangeLog for x11-drivers/xf86-input-evdev
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-evdev/ChangeLog,v 1.108 2009/04/16 03:20:48 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-evdev/ChangeLog,v 1.109 2009/04/28 15:50:02 remi Exp $
+
+  28 Apr 2009; Rémi Cardona <remi@gentoo.org>
+  -xf86-input-evdev-1.99.2-r2.ebuild, -xf86-input-evdev-2.0.1.ebuild,
+  -xf86-input-evdev-2.0.2.ebuild, -xf86-input-evdev-2.0.4.ebuild,
+  -xf86-input-evdev-2.0.5.ebuild, -xf86-input-evdev-2.0.6.ebuild,
+  -xf86-input-evdev-2.0.7.ebuild, -xf86-input-evdev-2.1.0.ebuild,
+  -xf86-input-evdev-2.1.1.ebuild, -xf86-input-evdev-2.1.2.ebuild,
+  -xf86-input-evdev-2.2.0.ebuild:
+  prune older versions
 
   16 Apr 2009; Jeroen Roovers <jer@gentoo.org>
   xf86-input-evdev-2.1.3.ebuild:
